GNOME Bugzilla – Bug 745039
can't take a screenshot of background menu
Last modified: 2015-06-18 06:31:17 UTC
I was trying to test if other menus experience screenshot rendering problems too, and found that I can't take a screenshot while the background menu is open.
Created attachment 297704 [details] [review] popupMenu: Use TOPBAR_POPUP action mode for all menus When it comes to keybindings or gestures, there's not really a good reason why popups associated with the top bar should behave differently from any other shell menus. Just set the action mode generically for all menus, so actions like screenshots or media-keys start working with menus like the background- or app launcher context menus.
Review of attachment 297704 [details] [review]: OK.
Attachment 297704 [details] pushed as c79d24b - popupMenu: Use TOPBAR_POPUP action mode for all menus
*** Bug 751134 has been marked as a duplicate of this bug. ***