src/shell-action-modes.h
@@ -15,8 +15,7 @@
  * @SHELL_ACTION_MODE_SYSTEM_MODAL: allow action when a system modal
  *     dialog (e.g. authentification or session dialogs) is open
  * @SHELL_ACTION_MODE_LOOKING_GLASS: allow action in looking glass
- * @SHELL_ACTION_MODE_TOPBAR_POPUP: allow action while a top bar menu
- *     is open
+ * @SHELL_ACTION_MODE_POPUP: allow action while a shell menu is open
  * @SHELL_ACTION_MODE_ALL: always allow action
  *
  * Controls in which GNOME Shell states an action (like keybindings and gestures)
@@ -32,7 +31,7 @@ typedef enum {
   SHELL_ACTION_MODE_MESSAGE_TRAY  = 1 << 5,
   SHELL_ACTION_MODE_SYSTEM_MODAL  = 1 << 6,
   SHELL_ACTION_MODE_LOOKING_GLASS = 1 << 7,
-  SHELL_ACTION_MODE_TOPBAR_POPUP  = 1 << 8,
+  SHELL_ACTION_MODE_POPUP         = 1 << 8,
 
   SHELL_ACTION_MODE_ALL = ~0,
 } ShellActionMode;
